--- a/index.html
+++ b/index.html
@@ -5,17 +5,44 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Frontend Mentor | Base Apparel coming soon page</title>
+  <link rel="shortcut icon" href="assets/favicon-32x32.png" type="image/x-icon">
+  <link rel="stylesheet" href="styles/styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
 </head>
 <body>
+  <main class="grid-container">
+    <div class="logo-ctn column-a-1"> <!-- Container -->
+      <img src="assets/logo.svg" alt="Base Apparel logo">
+    </div>
 
-  We're coming soon
+    <div class="img-ctn row-b"> <!-- Container -->
+      <picture>
+        <source media="(min-width: 720px)" srcset="assets/hero-desktop.jpg">        
+        <img src="assets/hero-mobile.jpg" alt="">
+      </picture>
+    </div>
 
-  Hello fellow shoppers! We're currently building our new fashion store. 
-  Add your email below to stay up-to-date with announcements and our launch deals.
+    <section class="text-ctn column-a-2"> <!-- Container -->
+      <h1>
+        <span>We're</span>
+        coming soon
+      </h1>
 
-  Email Address
+      <p> Hello fellow shoppers! We're currently building our new fashion store. 
+        Add your email below to stay up-to-date with announcements and our launch deals.
+      </p>
+
+      <label for="">
+        <input type="email" name="" id="" placeholder="Email Address">
+        <img class="d-none" src="assets/icon-error.svg" alt="">
+        <button class="submit-btn"> <img src="assets/icon-arrow.svg" alt=""></button>
+      </label>
+    </section>
+  </main>
   
-  <footer>
+  <footer class="d-none">
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Your Name Here</a>.
