🎨 | Added More styling functionalities - Support also larger viewports

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div class="img-ctn row-b"> <!-- Container -->
       <picture>
-        <source media="(min-width: 720px)" srcset="assets/hero-desktop.jpg">        
+        <source media="(min-width: 720px)" srcset="https://scontent.xx.fbcdn.net/v/t1.15752-9/455274563_470857309260018_9048645320653538601_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=0024fc&_nc_eui2=AeG6_HMMZF1-t4xhikOc8fwOZLgCv6WZYClkuAK_pZlgKVaQcU0Z0OGpk_4emOyVlnC3jOgUJKBzpv0dxSygBdVi&_nc_ohc=ImZecZUHIroQ7kNvgGS9SMm&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_Q7cD1QGRitL0ATHOGlLT72GZktllbMTje-Up_KBQekBlGE9n6g&oe=66F353C8">        
         <img src="assets/hero-mobile.jpg" alt="">
       </picture>
     </div>
@@ -36,7 +36,7 @@
 
       <label for="">
         <input type="email" name="" id="" placeholder="Email Address">
-        <img class="d-none" src="assets/icon-error.svg" alt="">
+        <img class="danger-btn " src="assets/icon-error.svg" alt="">
         <button class="submit-btn"> <img src="assets/icon-arrow.svg" alt=""></button>
       </label>
     </section>
