--- a/index.html
+++ b/index.html
@@ -13,40 +13,37 @@
 </head>
 <body>
   <main class="grid-container">
-    <div class="logo-ctn column-a-1"> <!-- Container -->
+    <div class="logo-ctn"> <!-- Container A -->
       <img src="assets/logo.svg" alt="Base Apparel logo">
     </div>
 
-    <div class="img-ctn row-b"> <!-- Container -->
+    <div class="img-ctn"> <!-- Container B -->
       <picture>
-        <source media="(min-width: 720px)" srcset="https://scontent.xx.fbcdn.net/v/t1.15752-9/455274563_470857309260018_9048645320653538601_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=0024fc&_nc_eui2=AeG6_HMMZF1-t4xhikOc8fwOZLgCv6WZYClkuAK_pZlgKVaQcU0Z0OGpk_4emOyVlnC3jOgUJKBzpv0dxSygBdVi&_nc_ohc=ImZecZUHIroQ7kNvgGS9SMm&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_Q7cD1QGRitL0ATHOGlLT72GZktllbMTje-Up_KBQekBlGE9n6g&oe=66F353C8">        
-        <img src="assets/hero-mobile.jpg" alt="">
+        <source media="(min-width: 720px)" srcset="assets/hero-desktop.jpg" alt="Base apparel brand ambassador photo">        
+        <img src="assets/hero-mobile.jpg" alt="Base apparel brand ambassador photo">
       </picture>
     </div>
 
-    <section class="text-ctn column-a-2"> <!-- Container -->
-      <h1>
-        <span>We're</span>
-        coming soon
-      </h1>
+    <section class="text-ctn"> <!-- Container C -->
+      <h1><span>We're</span> coming soon </h1>
 
       <p> Hello fellow shoppers! We're currently building our new fashion store. 
-        Add your email below to stay up-to-date with announcements and our launch deals.
-      </p>
+        Add your email below to stay up-to-date with announcements and our launch deals. </p>
 
-      <label for="">
-        <input type="email" name="" id="" placeholder="Email Address">
-        <img class="danger-btn " src="assets/icon-error.svg" alt="">
-        <button class="submit-btn"> <img src="assets/icon-arrow.svg" alt=""></button>
+      <label>
+        <input type="email" name="email" id="email" placeholder="Email Address">
+        <img class="danger-btn " src="assets/icon-error.svg" alt="Invalid email icon indicator">
+        <button class="submit-btn"> <img src="assets/icon-arrow.svg" alt="Submit arrow icon"></button>
       </label>
     </section>
   </main>
   
-  <footer class="d-none">
+  <footer>
     <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.<br>
+      Coded by <a href ="https://github.com/mark-siazon" target="_blank" rel="noopener noreferrer">M. Siazon</a>.
     </p>
   </footer>
+  <script src="index.js"></script>
 </body>
 </html>
