--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
       <p> Hello fellow shoppers! We're currently building our new fashion store. 
         Add your email below to stay up-to-date with announcements and our launch deals. </p>
 
-      <label>
+      <label id="email-label">
         <input type="email" name="email" id="email" placeholder="Email Address">
-        <img class="danger-btn " src="assets/icon-error.svg" alt="Invalid email icon indicator">
-        <button class="submit-btn"> <img src="assets/icon-arrow.svg" alt="Submit arrow icon"></button>
+        <img class="danger-btn d-none" src="assets/icon-error.svg" alt="Invalid email icon indicator">
+        <button class="submit-btn" id="submit-btn" type="button"> <img src="assets/icon-arrow.svg" alt="Submit arrow icon"></button>
       </label>
     </section>
   </main>
